internal/xds/translator/testdata/out/xds-ir/http-route-rewrite-url-regex.routes.yaml
- ignorePortInHostMatching: true
  name: first-listener
  virtualHosts:
  - domains:
    - gateway.envoyproxy.io
    name: first-listener/gateway_envoyproxy_io
    routes:
    - match:
        pathSeparatedPrefix: /origin
      name: rewrite-route
      route:
        cluster: rewrite-route
        regexRewrite:
          pattern:
            googleRe2: {}
            regex: ^/service/([^/]+)(/.*)$
          substitution: \2/instance/\1
        upgradeConfigs:
        - upgradeType: websocket
    - match:
        pathSeparatedPrefix: /$env
      name: rewrite-route-with-special-characters
      route:
        cluster: rewrite-route
        regexRewrite:
          pattern:
            googleRe2: {}
            regex: ^/\$env\/*
          substitution: /
        upgradeConfigs:
        - upgradeType: websocket
    - match:
        pathSeparatedPrefix: /origin
      name: rewrite-route-timeout
      route:
        cluster: rewrite-route
        idleTimeout: 3600s
        regexRewrite:
          pattern:
            googleRe2: {}
            regex: ^/service/([^/]+)(/.*)$
          substitution: \2/instance/\1
        timeout: 5s
        upgradeConfigs:
        - upgradeType: websocket
